@@ -3,7 +3,7 @@
 
 Remove section where it sets Windows update to auto download and installed [X]
 
-Remove Windows update install
+Remove Windows update install / dism section (may add later)
 
 remove pre-installed apps
 
