@@ -6,3 +6,5 @@ Added inital Licensing and copyrights
 Removed section where Windows updates set to auto-install, Windows updates will now notify for Download and install
 
 Removed section for Windows update, program will not install updates
+
+Removed Windows update and image management section
